JDK auf Version 21 umgestellt